force-app/main/default/objects/Sales_Discount__c/Sales_Discount__c.object-meta.xml
<CustomObject>
    <label>Sales Discount</label>
    <nameField>
        <label>Sales Discount Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Discounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>