force-app/main/default/objects/Sales_Discount__c/fields/Discount_Code__c.field-meta.xml
<CustomField>
    <fullName>Discount_Code__c</fullName>
    <label>Discount Code</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>