force-app/main/default/objects/Sales_Discount__c/listViews/Active_Sales_Discounts.listView-meta.xml
<ListView>
    <fullName>Active_Sales_Discounts</fullName>
    <columns>IsActive__c</columns>
    <columns>NAME</columns>
    <columns>Discount__c</columns>
    <columns>Discount_Code__c</columns>
    <filterScope>Everything</filterScope>
    <label>Active Sales Discounts</label>
</ListView>